removed a comma in multiple class assignment; fixed all the alignment problems

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ nav {
 	left: 0;
 
 	width: 100%;
-	height: 35px;
+	height: 55px;
 	background: white;
 
 	padding-top: 15px;
@@ -37,15 +37,10 @@ nav {
 /* SECTIONS */
 .container {
 	position: fixed;
-	top: 60px;
+	top: 70px;
 	height: 100%;
 	width: 96%; /* SUPER HACKY - no idea why text truncates at 100%... */
 	padding: 10px;
-}
-
-/* HACKY THINGS */
-.spacer {
-	height: 60px;
 }
 
 
